# jasmine-ai-companion

./: .gitignore  LICENSE  README.md  checkins.py  demo.py  jasmine.py  jasmine_core.py  pyproject.toml  requirements.txt  scheduler.py  skills.py  voice.py
tests/: test_checkins_scheduler.py  test_core.py
